--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -3,7 +3,7 @@
       /* Basic Options */
       "target": "es2017",
       "module": "commonjs",
-      "lib":["ES2020"],
+      "lib":["ES2020", "DOM"],
       "outDir": "dist",
       "rootDir": ".",
       "sourceMap": true,
