--- a/server/package.json
+++ b/server/package.json
@@ -13,7 +13,9 @@
     "config": "^3.3.9",
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "express-rate-limit": "^7.1.5"
+    "express-rate-limit": "^7.1.5",
+    "sequelize": "^6.35.2",
+    "sqlite3": "^5.1.6"
   },
   "devDependencies": {
     "nodemon": "^3.0.2",
